--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Rafi Art Blog
+name: 
 author: rafi rasyadi, gardis
-url: https://rafi-sudo.github.io/rafiart/
+url: 
 baseurl: /rafiart
 resume_site: 
 description: tutorial rafi rasyadi, fyi, hunting jadul, jumat berkah, senin semangat, rafi rasyadi
