--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: 
 author:
 url: 
-baseurl: /rafiart
+baseurl: ""
 resume_site: 
 description: tutorial rafi rasyadi, fyi, hunting jadul, jumat berkah, senin semangat, rafi rasyadi
 github_username: rafi-sudo
